--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         h1 {
             font-size: clamp(28px, 8vw, 42px);
-            color: #c9a961;
+            color: #f5a9de;
             text-align: center;
             margin: 0 0 20px 0;
             text-transform: uppercase;
@@ -61,9 +61,9 @@
             padding: 15px 40px;
             font-size: 18px;
             font-family: 'Bebas Neue', sans-serif;
-            background-color: #c9a961;
+            background-color: #f5a9de;
             color: #1a1a1a;
-            border: 3px solid #a88a4f;
+            border: 3px solid #d47ab8;
             border-radius: 4px;
             cursor: pointer;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -73,7 +73,7 @@
         }
 
         #startBtn:hover {
-            background-color: #d4b56f;
+            background-color: #f7c1e8;
             transform: translateY(-2px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
         }
@@ -92,7 +92,7 @@
 
         #status {
             margin-top: 15px;
-            color: #c9a961;
+            color: #f5a9de;
             font-size: 14px;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -154,9 +154,9 @@
             padding: 12px 30px;
             font-size: 16px;
             font-family: 'Bebas Neue', sans-serif;
-            background-color: #c9a961;
+            background-color: #f5a9de;
             color: #1a1a1a;
-            border: 3px solid #a88a4f;
+            border: 3px solid #d47ab8;
             border-radius: 4px;
             cursor: pointer;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -166,7 +166,7 @@
         }
 
         #actions button:hover {
-            background-color: #d4b56f;
+            background-color: #f7c1e8;
             transform: translateY(-2px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
         }
